--- a/www/css/style.css
+++ b/www/css/style.css
@@ -775,6 +775,10 @@ ion-content {
 	font-family: 'Sigmar One', cursive;
 }
 
+.platform-browser .gameArea {
+	transform: rotate(270deg) !important;
+}
+
 .gameArea h4, .gameArea p {
 	font-family: 'Sigmar One', cursive;
 }
