--- a/www/templates/postal-modal.html
+++ b/www/templates/postal-modal.html
@@ -4,7 +4,7 @@
   
       
     <form novalidate name="AddressForm">
-        <p class="formTxt">Please e​nter your company's postal address</p>        
+        <p class="formTxt">Please enter your company's postal address</p>        
 
     <ul class="list">
 	  <li class="item item-checkbox item-text-wrap">
@@ -23,25 +23,31 @@
           </div>
 
           <label class="item item-input">
-            <input type="text" class="caps" placeholder="Address Line 2" name="Address1" ng-model="NewUser.postalAddress[1]">
+            <input type="text" class="caps" placeholder="Address Line 2" name="Address2" ng-model="NewUser.postalAddress[1]" >
           </label>
           
            <label class="item item-input">
-            <input type="text" class="caps" placeholder="Address Line 3" name="Address1" ng-model="NewUser.postalAddress[2]">
+            <input type="text" class="caps" placeholder="Address Line 3" name="Address3" ng-model="NewUser.postalAddress[2]">
           </label>
           
           <label class="item item-input">
-            <input type="text" class="caps" placeholder="City" name="Address1" ng-model="NewUser.postalAddress[3]" />
+            <input type="text" class="caps" placeholder="City" name="City" ng-model="NewUser.postalAddress[3]" required="true" />
           </label>
+          <div ng-show="AddressForm.$submitted || ddressForm.City.$touched">
+            <span class="err" ng-show="AddressForm.City.$error.required">Please provide your city.</span>
+         </div>
 
           <label class="item item-input">
-            <input type="text" class="caps" placeholder="Zip Code" name="ZipCode" ng-model="NewUser.postalAddress[4]"/>
+            <input type="text" class="caps" placeholder="Zip Code" name="ZipCode" ng-model="NewUser.postalAddress[4]" required="true"/>
           </label>
-              
+           <div ng-show="AddressForm.$submitted || AddressForm.ZipCode.$touched">
+          <span class="err" ng-show="AddressForm.ZipCode.$error.required">Please provide your ZIP Code.</span>
+        </div>
+        <button ng-click="ClosePostalAddress()" class="button button-block button-balanced" ng-show="AddressForm.$valid">
+            Done
+        </button>              
         </div>
     </form>
-    <button ng-click="ClosePostalAddress()" class="button button-block button-balanced" ng-show="AddressForm.$valid">
-      Done
-    </button>
+    
   </ion-content>
 </ion-modal-view>
