--- a/www/css/style.css
+++ b/www/css/style.css
@@ -773,14 +773,16 @@ ion-content {
 	background-size: cover;
 	z-index: 1000000000000 !important;
 	font-family: 'Sigmar One', cursive;
+    
 }
 
 .platform-browser .gameArea {
-	transform: rotate(270deg) !important;
+/*	transform: rotate(270deg) !important;*/
 }
 
 .gameArea h4, .gameArea p {
 	font-family: 'Sigmar One', cursive;
+    font-size:small;
 }
 
 #powerContainer {
@@ -789,6 +791,10 @@ ion-content {
 	left: 60px;
 	width: 210px;
 	z-index: 10;
+}
+
+#gameArea{
+ transform: rotate(90deg)   
 }
 
 #powerBar {
