--- a/www/templates/address-modal.html
+++ b/www/templates/address-modal.html
@@ -35,7 +35,7 @@
           <div class="input-label item-text-wrap smallLabel">
             {{NewUser.region}}
           </div>
-          <select ng-options="region for region in Regions" ng-model="NewUser.region" required="" name="Region" data-tab-disabled="true" ng-class="{'customSmallSelect' : NewUser.region != 'Region'}">
+          <select ng-options="region for region in Regions" ng-model="NewUser.region" required="" name="Region"  ng-class="{'customSmallSelect' : NewUser.region != 'Region'}">
             <option value=""></option>
           </select>
         </label>
@@ -46,7 +46,7 @@
            
            
            <label class="item item-input">
-          <input type="text"  maxlength="4" class="caps" placeholder="Zip Code" name="ZipCode"  ng-model="NewUser.address[4]" required="true"/>
+          <input type="text"  maxlength="4" class="caps" placeholder="Zip Code" name="ZipCode"  ng-model="NewUser.address[4]" required=""/>
         </label> 
            
         <div ng-show="AddressForm.$submitted || AddressForm.ZipCode.$touched">
