--- a/www/templates/changepassword.html
+++ b/www/templates/changepassword.html
@@ -1,10 +1,9 @@
 <ion-view>
   <ion-content>
-    <h3>Change Password</h3>
-
-    <div class="list">
+    <h3>Change Password</h3>   
 
 	  <form novalidate name="ChangePassword">
+          <div class="list">
 		<label class="item item-input item-stacked-label">
 			<span class="input-label">Current Password</span>
 			<input type="password" name="CurrentPassword" ng-model="NewPassword.oldPassword" required>
@@ -21,16 +20,15 @@
 
 		<div ng-show="ChangePassword.$submitted || ChangePassword.NewPassword.$touched">
 			<span class="err" ng-show="ChangePassword.NewPassword.$error.required">Please provide your current password.</span>
-		</div>
-
-		<button class="button button-block button-balanced" ng-show="ChangePassword.$valid" ng-click="SendPasswordChange()">
-		  Submit
-		</button>
-
-	  </form>
+		</div> 
 
 	</div>
-
+      <div class="list list-inset">
+      <button class="button button-block button-balanced" ng-show="ChangePassword.$valid" ng-click="SendPasswordChange()">
+		  Submit
+		</button>
+      </div>
+ </form>
 
   </ion-content>
 </ion-view>
