--- a/www/css/style.css
+++ b/www/css/style.css
@@ -231,7 +231,6 @@ ion-content {
 }
 
 
-
 @media(max-width:408px){
     .productType .type{
        max-width:80px;  
@@ -767,6 +766,121 @@ ion-content {
 }
 
 /*GAME*/
+
+
+.chat-bubble{
+  border-radius: 5px;
+  display: inline-block;
+  padding: 10px 10px;
+  position: absolute;
+  margin: 10px;
+  max-width: 99%;   
+  transform: rotate(90deg); 
+  left: -12.3em;
+  top: 12.5em;   
+  border-bottom: 2px solid brown;
+  border-right: 2px solid brown;
+  z-index:100000;    
+}
+
+.chat-bubble:before {
+  content: "\00a0";
+  display: block;
+  height: 16px;
+  width: 9px;
+  position: absolute;
+  bottom: 10px;
+  left:-5px;     
+    
+    -webkit-transition: all 400ms ease-in-out;
+    -moz-transition: all 400ms ease-in-out;
+    -o-transition: all 400ms ease-in-out;
+    transition: all 400ms ease-in-out;
+}
+
+.chat-bubble.left {
+  background-color: #fff;
+  float: left;
+  margin-left: 55px;
+  text-align:center;
+}
+
+.chat-bubble.left:before {
+  background-color: #fff;
+  -webkit-transform: rotate(155deg) skew(5deg);
+  transform: rotate(155deg) skew(5deg);
+}
+
+
+/*iPhone 6 Plus*/
+@media(max-width:414px) and (max-height:736px){
+    .chat-bubble{
+        left:-16em;
+        top:16.5em;
+    }
+    
+    #menuBox{
+        left:27%;
+    }    
+}
+
+
+/*iPhone 6*/
+@media(max-width:375px) and (max-height:667px){
+    .chat-bubble{
+        left:-14.8em;
+        top:15em;
+    }
+    
+    #menuBox{
+        left:27%;
+    }    
+}
+
+/*Samsung Gallaxy*/
+@media(max-width:360px) and (max-height:640px){
+    .chat-bubble{
+        left:-14.2em;
+        top:14.6em;
+    }
+    
+    #menuBox{
+        left:27%;
+    }
+    }
+}
+
+
+/*iPhone5*/
+@media(max-width:320px) and (max-height:568px){
+    .chat-bubble{
+        left:-13em;
+        top:13em;
+    }
+    
+    #menuBox{
+        left:27%;
+    }
+    
+}
+
+
+
+
+
+/*iPhone4*/
+@media(max-width:320px) and (max-height:480px){
+    .chat-bubble{
+        left:-13em;
+        top:13em;
+    }
+    
+    #menuBox{
+        left:27%;
+    }    
+}
+
+
 
 .gameArea {
 	position: fixed;
