--- a/www/templates/game.html
+++ b/www/templates/game.html
@@ -3,6 +3,7 @@
 
 	<div class="gameArea _jsGameArea" id="gameArea"  >
 		<div id="box"></div>
+        <div id="guide" class="chat-bubble left" ng-show="!Started">Tilt your screen left or right to help me catch the bottles.</div>
 		<p ng-click="StopGame()" class="stopGame rotate90">Stop Game</p>
 		<div class="scoreDisplay rotate90">{{TimeLeft}}</div>
 		<img src="img/game/healthContainer.png" alt="" id="powerContainer">
@@ -12,6 +13,7 @@
 			<div class="menuText rotate90">
 				<div id="userName" ng-show="!Started">Hi, {{User.firstName}}!</div>
 				<h4>Aim of the game:</h4>
+<!--                <p>Tilt your device to catch bottles in the bin for recycling into <span class="bidimLogo">bidim</span></p>-->
 				<p>Recycle as many plastic bottles as you can to see how much <span class="bidimLogo">bidim</span> you can create!</p>
 				<div id="startGame" class="gameBigButton level4" ng-click="StartGame()" ng-show="!Started">Start Game</div>
 			</div>
