--- a/www/templates/game.html
+++ b/www/templates/game.html
@@ -3,7 +3,7 @@
 
 	<div class="gameArea _jsGameArea" id="gameArea"  >
 		<div id="box"></div>
-        <div id="guide" class="chat-bubble left" ng-show="!Started">Tilt your screen left or right to help me catch the bottles.</div>
+        <div id="guide" class="chat-bubble left rotate90" ng-show="!Started">Tilt your screen left or right to help me catch the bottles.</div>
 		<p ng-click="StopGame()" class="stopGame rotate90">Stop Game</p>
 		<div class="scoreDisplay rotate90">{{TimeLeft}}</div>
 		<img src="img/game/healthContainer.png" alt="" id="powerContainer">
